# SeeFonts

./: .gitignore  .pdm-python  README.md  pyproject.toml
.github/workflows/: build-seefont.yml
data/: charset-han-ex.txt  charset-han.txt  charset-ipatone.txt  charset-latin.txt  charset-yngping.txt  han-ex.txt  han.txt  yngping.txt
scripts/: build_han_charset.py  charset_pdf.py  collect_charset.py  dist_webfont.py  subset_font.py
src/: charset_pdf.py  collect_charset.py  dist_webfont.py  merge_fonts.py  subset_font.py  utils.py
