[project]
name = "SeeFonts"
version = "1.0.5"
description = "Extended fonts for SeeDict."
authors = [
    {name = "Leo", email = "im.yczeng@foxmail.com"},
]
dependencies = ["fonttools[unicode,woff]>=4.59.2", "Brotli>=1.1.0", "zopfli>=0.2.3.post1", "fpdf2>=2.8.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.mypy]
ignore_missing_imports = true
